Fixed font issues, fixed footer alignment, and added temporary favicon

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sarah Ferguson - About</title>
+    <link rel="icon" type="image/png" href="images/favicon/favicon.ico">
     <link rel="stylesheet" href="./Styles/resetStyles.css">
     <link rel="stylesheet" href="./Styles/baseStyles.css">
     <link rel="stylesheet" href="./Styles/navIcon.css">
