--- a/storefront.html
+++ b/storefront.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sarah Ferguson - Store</title>
+    <link rel="icon" type="image/png" href="images/favicon/favicon.ico">
     <link rel="stylesheet" href="./Styles/resetStyles.css">
     <link rel="stylesheet" href="./Styles/baseStyles.css">
     <link rel="stylesheet" href="./Styles/navIcon.css">
@@ -29,6 +30,7 @@
         <h1 class="alert">Notice: Storefront under construction. This page will be active upon full deployment</h1>
 
     </section>
+
     <footer>
         <p>This webpage is a work in progress. All artwork used &#xa9; Sarah Ferguson.</p>
     </footer>
