--- a/contactPage.html
+++ b/contactPage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sarah Ferguson - Contact Me</title>
-    
+    <link rel="icon" type="image/png" href="images/favicon/favicon.ico">
     <link rel="stylesheet" href="./Styles/resetStyles.css">
     <link rel="stylesheet" href="./Styles/baseStyles.css">
     <link rel="stylesheet" href="./Styles/navIcon.css">
@@ -28,7 +28,6 @@
         <h1 class="alert">No contact info yet. I am an enigma</h1>
     </div>
     
-
     <footer>
         <p>This webpage is a work in progress. All artwork used &#xa9; Sarah Ferguson.</p>
     </footer>
