--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sarah Ferguson - Home</title>
-    <link rel="icon" type="image/png" href="images/favicon/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="Images/favicon/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="Images/favicon/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="Images/favicon/favicon_io/favicon-16x16.png">
     <link rel="stylesheet" href="./Styles/resetStyles.css">
     <link rel="stylesheet" href="./Styles/baseStyles.css">
     <link rel="stylesheet" href="./Styles/navIcon.css">
