--- a/contactPage.html
+++ b/contactPage.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="Images/favicon/favicon_io/favicon-16x16.png">
     <link rel="stylesheet" href="./Styles/resetStyles.css">
     <link rel="stylesheet" href="./Styles/baseStyles.css">
+    <link rel="stylesheet" href="./Styles/homeStyles.css">
     <link rel="stylesheet" href="./Styles/navIcon.css">
 </head>
 <body>
@@ -17,7 +18,6 @@
             <a id="navicon" href="#"><img src="Images/tempNavIcon.png" id="navicon" alt=""></a>
             <ul class="nav-list">
                 <li><a href="./index.html">Home</a></li>
-                <li><a href="./aboutMe.html">About</a></li>
                 <li><a href="./gallery.html">Gallery</a></li>
                 <li><a href="./classLanding.html">Classes</a></li>
                 <li><a href="./storefront.html">Shop</a></li>
@@ -27,7 +27,16 @@
     </header>
 
     <div class="main">
-        <h1 class="alert">No contact info yet. I am an enigma</h1>
+        <div id="contactInfo">
+            <h1>Contact me!</h1>
+            <br><hr><br>
+            <h2>Email me at: sarahjaneferg@yahoo.com for information on courses and artwork sales</h2>
+            <br>
+            <a href="https://www.instagram.com/hipogirl2000?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">
+                <img src="Images/Instagram_Glyph_Black.jpg" id="instaLogo" alt="Instagram Link"></a>
+            <a href="https://www.facebook.com/profile.php?id=100038572516312">
+                <img src="Images/Facebook_Logo_Primary.png" id="facebookLogo" alt="Facebook Link"></a>
+        </div>
     </div>
     
     <footer>
