Added contact nav bar

--- a/classLanding.html
+++ b/classLanding.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./Styles/baseStyles.css">
     <link rel="stylesheet" href="./Styles/navIcon.css">
     <script src="Scripts/classSelection.js"></script>
+    <script src="https://kit.fontawesome.com/45ef01d0f0.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -22,7 +23,6 @@
                 <li><a href="./gallery.html">Gallery</a></li>
                 <li><a href="./classLanding.html" id="currentPage">Classes</a></li>
                 <li><a href="./storefront.html">Shop</a></li>
-                <li><a href="./contactPage.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -56,7 +56,16 @@
     </section>
 
     <footer>
-        <p>This webpage is a work in progress. All artwork used &#xa9; Sarah Ferguson.</p>
+        <div class="signature-left">
+            <p>All artwork &#xa9; Sarah Ferguson. </p>
+        </div>
+        <div class="social-media-icons">
+            <ul>
+                <li><a href="mailto:sarahjaneferg@yahoo.com"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
+                <li><a href="https://www.instagram.com/hipogirl2000?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                <li><a href="https://www.facebook.com/profile.php?id=100038572516312"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+            </ul>
+        </div>
     </footer>
 </body>
 </html>
